// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByChallenge Reducer Test append = false 1`] = `
Object {
  "anticheatStatistics": Array [
    3,
    4,
  ],
  "nextPageToken": "CAE",
}
`;

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByChallenge Reducer Test append = true 1`] = `
Object {
  "anticheatStatistics": Array [
    1,
    2,
    3,
    4,
  ],
  "nextPageToken": "CAE",
}
`;

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByChallenge Reducer handle ANTICHEAT_STATISTICS_FETCH_SUCCESS: anticheatStatistics and nextPagetoken assignation 1`] = `
Object {
  "anticheatStatistics": Array [
    Object {
      "challengeId": "1",
      "correct": "1",
      "failures": "25",
      "percentCorrect": "2",
      "punishments": "18",
      "unanswered": "14",
      "unexpected": "20",
    },
  ],
  "nextPageToken": "CAE",
}
`;

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByChallenge Reducer handle ANTICHEAT_STATISTICS_FETCH_SUCCESS: empty results 1`] = `
Object {
  "anticheatStatistics": Array [],
  "nextPageToken": null,
}
`;

exports[`Security - Anticheat - AnticheatStatistics - StatisticsByChallenge Reducer return the initial state 1`] = `
Object {
  "anticheatStatistics": Array [],
  "nextPageToken": null,
}
`;
